<resources>
    <string name="app_name">Weekly Meal</string>
    <string name="settings">Settings</string>
    <string name="shopping_list">Shopping List</string>
    <string name="favourite_recipes">Favourite Recipes</string>
    <string name="faq">FAQ</string>
    <string name="week_name">Week Name</string>
    <string name="add_meal">Add Meal</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel\n</string>
    <string name="save">Save</string>
    <string name="add_a_meal">Add a Meal</string>
    <string name="meal_type">Meal Type</string>
    <string name="reset">Reset Meal Items</string>
    <string name="add_shopping_items">Add Shopping Items</string>
    <string name="clear_meal">Clear Meal</string>
    <string name="update_meal">Update Meal</string>
    <string name="add_recipes">Add Recipes</string>
    <string name="add_favourite_recipes">Add Favourite Recipes</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="todo">TODO</string>
    <string name="are_you_sure_to_reset_all_meal_items">Are you really want to reset\n all meal items?</string>
    <string name="yes">Yes</string>
    <string name="floating_action_button">Floating action button</string>
    <string name="add_recepie">Add Recepie</string>
    <string name="category_name">Category Name</string>
</resources>