<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/tv_add_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/btn_selected_round_effect_bg"
            android:backgroundTint="@color/colorWhite"
            android:fontFamily="@font/poppins_bold"
            android:padding="7dp"
            android:text="@string/add_favourite_recipes"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_update_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/btn_selected_round_effect_bg"
            android:backgroundTint="@color/colorWhite"
            android:fontFamily="@font/poppins_bold"
            android:padding="7dp"
            android:text="@string/update_meal"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_clear_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/btn_selected_round_effect_bg"
            android:backgroundTint="@color/colorWhite"
            android:fontFamily="@font/poppins_bold"
            android:padding="7dp"
            android:text="@string/clear_meal"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>