<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/tv_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/are_you_sure_to_reset_all_meal_items"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorBackground"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_circle_white_bg"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_yes"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_circle_white_bg"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/yes"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>