<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.ShoppingListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@null"
            app:cardCornerRadius="300dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_circle_white_bg"
                android:contentDescription="@string/shopping_list"
                android:padding="7dp"
                android:src="@drawable/baseline_arrow_back_24"
                app:tint="@color/colorText" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/cv_back"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/shopping_list"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:cardBackgroundColor="@null"
            app:cardCornerRadius="300dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_circle_white_bg"
                android:contentDescription="@string/shopping_list"
                android:padding="10dp"
                android:src="@drawable/reset_icon"
                app:tint="@color/colorPrimary" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <EditText
            android:id="@+id/et_add_shopping_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/round_corner_bg"
            android:drawableStart="@drawable/outline_shopping_cart_24"
            android:drawablePadding="15dp"
            android:fontFamily="@font/poppins_bold"
            android:hint="@string/add_shopping_items"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_bg"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/save"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_shopping_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_corner_bg"
        android:padding="15dp" />

</LinearLayout>