<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.Settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@null"
            app:cardCornerRadius="300dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_circle_white_bg"
                android:contentDescription="@string/settings"
                android:padding="7dp"
                android:src="@drawable/baseline_arrow_back_24"
                app:tint="@color/colorText" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/cv_back"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_corner_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/rl_shopping_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/btn_selected_round_effect_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:background="@drawable/round_icon_bg"
                android:scaleType="center"
                android:src="@drawable/outline_shopping_cart_24"
                app:tint="@color/colorPrimary"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="70dp"
                android:autoMirrored="true"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/shopping_list"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="@drawable/baseline_arrow_forward_ios_24"
                android:backgroundTint="@color/colorPrimary"
                android:scaleType="center"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/colorBackground" />

        <RelativeLayout
            android:id="@+id/rl_favourite_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/btn_selected_round_effect_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:background="@drawable/round_icon_bg"
                android:scaleType="center"
                android:src="@drawable/baseline_favorite_border_24"
                app:tint="@color/colorPrimary"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="70dp"
                android:autoMirrored="true"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/favourite_recipes"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="@drawable/baseline_arrow_forward_ios_24"
                android:backgroundTint="@color/colorPrimary"
                android:scaleType="center"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/colorBackground"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rl_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_selected_round_effect_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:background="@drawable/round_icon_bg"
                android:scaleType="center"
                android:src="@drawable/baseline_question_mark_24"
                app:tint="@color/colorPrimary"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="70dp"
                android:autoMirrored="true"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/reset"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="@drawable/baseline_arrow_forward_ios_24"
                android:backgroundTint="@color/colorPrimary"
                android:scaleType="center"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>